--- a/app/src/main/res/layout/activity_add_recipe.xml
+++ b/app/src/main/res/layout/activity_add_recipe.xml
@@ -40,12 +40,32 @@
         android:textColor="@color/white"
         android:background="@color/Red_400" />
 
+    <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/addRecipe_IMG_img"
+        android:layout_width="300dp"
+        android:layout_height="150dp"
+        android:layout_marginTop="170dp"
+        android:layout_marginStart="50dp"
+        android:scaleType="centerCrop"
+        app:srcCompat="@drawable/ic_launcher_background"/>
+
+    <Button
+        android:id="@+id/AddRecipe_Button_AddImage"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="350dp"
+        android:contentDescription="Add Recipe"
+        android:text="Load Image"
+        android:backgroundTint="@color/Red_400" />
+
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/layout_addRecipe_Input_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="30dp"
-        android:layout_marginTop="160dp"
+        android:layout_marginTop="410dp"
         style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">
 
         <com.google.android.material.textfield.TextInputEditText
@@ -63,7 +83,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="30dp"
-        android:layout_marginTop="220dp"
+        android:layout_marginTop="490dp"
         style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">
 
         <com.google.android.material.textfield.TextInputEditText
@@ -83,7 +103,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="30dp"
-        android:layout_marginTop="320dp"
+        android:layout_marginTop="570dp"
         style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">
 
         <com.google.android.material.textfield.TextInputEditText
@@ -98,23 +118,6 @@
             android:scrollbars="vertical"/>
     </com.google.android.material.textfield.TextInputLayout>
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/layout_addRecipe_Input_URL"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="30dp"
-        android:layout_marginTop="420dp"
-        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/addRecipe_Input_URL"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Photo URL"
-            android:maxLength="1000"
-            android:maxLines="2"
-            android:textSize="20sp"/>
-    </com.google.android.material.textfield.TextInputLayout>
 
     <Button
         android:id="@+id/AddRecipe_Button_AddRecipeB"
@@ -122,8 +125,10 @@
         android:layout_height="50dp"
         android:layout_alignParentStart="true"
         android:layout_marginStart="100dp"
-        android:layout_marginTop="520dp"
+        android:layout_marginTop="650dp"
         android:contentDescription="Add Recipe"
         android:text="Add Recipe"
         android:backgroundTint="@color/Red_400" />
+
+
 </RelativeLayout>
