--- a/app/src/main/res/layout/activity_zoom_recipie.xml
+++ b/app/src/main/res/layout/activity_zoom_recipie.xml
@@ -1,131 +1,113 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fillViewport="true"
+    android:background="@drawable/colorfontrose"
     tools:context=".Activities.ZoomRecipie">
 
-  <com.google.android.material.imageview.ShapeableImageView
-      android:id="@+id/main_IMG_background"
+  <RelativeLayout
       android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:scaleType="centerCrop"
-      android:src="@drawable/oranges" />
-  <TextView
-      android:id="@+id/zoom_TXT_Title"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_marginTop="20dp"
-      android:layout_marginLeft="30dp"
-      android:text="TASTY TRADES"
-      android:textSize="50sp"
-      android:textAlignment="center"
-      android:textStyle="bold"
-      android:textColor="@color/white"
-      android:paddingVertical="5dp"
-      android:background="@color/Red_400"
-      />
+      android:layout_height="wrap_content">
 
-  <ScrollView
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_marginTop="100dp"
-      android:layout_marginLeft="20dp">
+    <TextView
+        android:id="@+id/zoom_TXT_Title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="30dp"
+        android:text="TASTY TRADES"
+        android:textSize="50sp"
+        android:textAlignment="center"
+        android:textStyle="bold"
+        android:textColor="@color/white"
+        android:paddingVertical="5dp"
+        android:background="@color/Red_400" />
+
     <TextView
         android:id="@+id/zoom_TXT_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@id/zoom_TXT_Title"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="20dp"
         android:text="Name"
         android:textSize="30sp"
         android:textAlignment="center"
         android:textStyle="bold"
         android:textColor="@color/white"
         android:maxLines="3"
-        android:background="@color/Red_400"
+        android:background="@color/Red_400" />
 
-        />
-  </ScrollView>
+    <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/zoom_IMG_background"
+        android:layout_width="300dp"
+        android:layout_height="150dp"
+        android:layout_below="@id/zoom_TXT_name"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="50dp"
+        android:scaleType="centerCrop"
+        app:srcCompat="@drawable/cuisine" />
 
-  <com.google.android.material.imageview.ShapeableImageView
-      android:id="@+id/zoom_IMG_background"
-      android:layout_width="300dp"
-      android:layout_height="150dp"
-      android:layout_marginTop="150dp"
-      android:layout_marginStart="50dp"
-      android:scaleType="centerCrop"
-      app:srcCompat="@drawable/cuisine"/>
-
-  <ScrollView
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_marginTop="310dp"
-      android:layout_marginLeft="120dp">
     <TextView
         android:id="@+id/zoom_TXT_ingredientsTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@id/zoom_IMG_background"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="120dp"
         android:text="Ingredients:"
         android:textSize="30sp"
         android:textAlignment="center"
         android:textStyle="bold"
         android:textColor="@color/white"
         android:background="@color/Red_400"
-        android:maxLines="1"
-        />
-  </ScrollView>
+        android:maxLines="1" />
 
-  <ScrollView
-      android:layout_width="500dp"
-      android:layout_height="100dp"
-      android:layout_marginTop="350dp">
     <TextView
         android:id="@+id/zoom_TXT_ingredients"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@id/zoom_TXT_ingredientsTitle"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp"
+        android:maxLines="40"
         android:text="Ingredients.."
-        android:textSize="30sp"
-        android:textColor="@color/black"
         android:textAlignment="center"
-        android:textStyle="bold"
-        android:maxLines="40" />
-  </ScrollView>
+        android:textColor="@color/black"
+        android:textSize="30sp"
+        android:textStyle="bold" />
 
-  <ScrollView
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_marginTop="460dp"
-      android:layout_marginLeft="120dp">
     <TextView
         android:id="@+id/zoom_TXT_instructionTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@id/zoom_TXT_ingredients"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="120dp"
         android:text="Instruction:"
         android:textSize="30sp"
         android:textAlignment="center"
         android:textStyle="bold"
         android:textColor="@color/white"
         android:background="@color/Red_400"
-        android:maxLines="1"
-        />
-  </ScrollView>
-
-  <ScrollView
-      android:layout_width="500dp"
-      android:layout_height="200dp"
-      android:layout_marginTop="500dp">
+        android:maxLines="1" />
 
     <TextView
         android:id="@+id/zoom_TXT_Instructions"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@id/zoom_TXT_instructionTitle"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="20dp"
         android:text="Instructions.."
         android:textSize="30sp"
         android:textAlignment="center"
         android:textStyle="bold"
         android:textColor="@color/black"
         android:maxLines="40" />
-  </ScrollView>
 
-</RelativeLayout>
+  </RelativeLayout>
+</ScrollView>
